--- a/WPFApp/appsettings.json
+++ b/WPFApp/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "MyStockDB": "Server=(local);Database=MyStore;uid=sa;pwd=12345;"
+    "DefaultConnectionString": "Server=(local);Database=MyStore;uid=sa;pwd=12345;TrustServerCertificate=True;"
   }
 } 
